--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+html { box-sizing: border-box; height: 100%; }
 
+*, *::after, *::before { box-sizing: inherit; padding: 0; margin: 0; }
+
+body { min-width: 320px; overflow-x: hidden; height: 100%; }
+
+ol, ul { list-style: none; }
+
+a, a:link, a:visited, a:hover { text-decoration: none; }
+
+img { max-width: 40px; height: auto; vertical-align: top; }
+
+.container { max-width: 1200px; margin: 0 auto; background-color: aquamarine; padding: 24px 0px; }
+
+.header .header__wrapper .header__nav { display: flex; justify-content: flex-end; align-items: center; }
+.header .header__wrapper .header__nav .nav__items { display: flex; align-items: center; }
+.header .header__wrapper .header__nav .nav__items .nav__item { display: inline; position: relative; margin-right: 14px; }
+.header .header__wrapper .header__nav .nav__items .nav__item .nav__item-link { font-size: 14px; padding: 8px 16px; color: #1b1616; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; }
+.header .header__wrapper .header__nav .nav__items .nav__item .nav__item-link:hover { background-color: #a1cece; }
+.header .header__wrapper .header__nav .nav__items .nav__item .nav__item-link:focus, .header .header__wrapper .header__nav .nav__items .nav__item .nav__item-link:focus-visible { background-color: #6ddddd; }
+
+.checkbox, .checkbox__more { appearance: none; position: absolute; }
+
+.checkbox:checked ~ label .popup__button, .checkbox:focus ~ label .popup__button, .popup__button:hover { background-color: #86dfe6; }
+
+.checkbox:checked ~ .popup__wrapper { display: block; }
+
+.popup__button { cursor: pointer; }
+
+.popup__wrapper { display: none; position: absolute; top: 56px; right: -80px; overflow: hidden; width: 256px; height: 100%; padding: 4px; background-color: aliceblue; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; z-index: 1; }
+.popup__wrapper .popup__content { height: auto; overflow: auto; }
+
+.popup__content::-webkit-scrollbar { width: 4px; }
+
+.popup__content::-webkit-scrollbar-thumb { border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; background-color: #d1cbcb; }
 
 /*# sourceMappingURL=style.css.map */
