--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,10 @@ ol,
 ul {
   list-style: none;
 }
-a, a:link, a:visited, a:hover {
+a,
+a:link,
+a:visited,
+a:hover {
   text-decoration: none;
 }
 img {
@@ -27,15 +30,14 @@ img {
   height: auto;
   vertical-align: top;
 }
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
-  background-color: aquamarine;
+  background-color: rgb(212, 240, 231);
   padding: 24px 0px;
 }
 
 .header {
- 
   .header__wrapper {
     .header__nav {
       display: flex;
@@ -57,13 +59,12 @@ img {
             -moz-border-radius: 4px;
             -ms-border-radius: 4px;
             -o-border-radius: 4px;
-}
-          .nav__item-link:hover{
+          }
+          .nav__item-link:hover {
             background-color: rgb(161, 206, 206);
-            
           }
           .nav__item-link:focus,
-          .nav__item-link:focus-visible{
+          .nav__item-link:focus-visible {
             background-color: rgb(109, 221, 221);
           }
         }
@@ -72,21 +73,29 @@ img {
   }
 }
 
-.checkbox, 
+.checkbox,
 .checkbox__more {
   appearance: none;
   position: absolute;
 }
 .checkbox:checked ~ label .popup__button,
 .checkbox:focus ~ label .popup__button,
-.popup__button:hover{
+.popup__button:hover {
   background-color: rgb(134, 223, 230);
 }
 
-.checkbox:checked ~ .popup__wrapper{
+.checkbox:checked ~ .popup__wrapper {
   display: block;
 }
 
+.checkbox__more:checked ~ .popup__more-items {
+  display: flex;
+  justify-content: center;
+}
+.checkbox__more:focus ~ label .popup__more-name,
+.popup__more-name:hover {
+  background-color: rgb(218, 230, 226);
+}
 
 .popup__button {
   cursor: pointer;
@@ -98,7 +107,7 @@ img {
   right: -80px;
   overflow: hidden;
   width: 256px;
-  height: 100%;
+  height: 320px;
   padding: 4px;
   background-color: aliceblue;
   border-radius: 4px;
@@ -108,24 +117,61 @@ img {
   -o-border-radius: 4px;
   z-index: 1;
   .popup__content {
-    height: auto;
+    height: 320px;
     overflow: auto;
     .popup__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      padding-top: 8px;
       .popup__item {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        text-align: center;
+        margin-bottom: 8px;
         .popup__item-icon {
+          display: inline-block;
+          width: 70px;
+          height: fit-content;
+          text-align: center;
+          cursor: pointer;
+          border: 1px solid transparent;
+          border-radius: 4px;
+          -webkit-border-radius: 4px;
+          -moz-border-radius: 4px;
+          -ms-border-radius: 4px;
+          -o-border-radius: 4px;
+          margin-bottom: 8px;
+          padding: 4px 0;
+
           .popup__item-name {
+            display: block;
+            color: rgb(27, 24, 24);
+            font-size: 12px;
+            padding-top: 12px;
           }
+          .popup__item-name:hover {
+            text-decoration: underline;
+          }
+        }
+        .popup__item-icon:hover {
+          background-color: #d1cbcb;
+        }
+        .popup__item-icon:focus {
+          background-color: #aaa5a5;
+          outline: none;
         }
       }
     }
   }
-
 }
 
-.popup__content::-webkit-scrollbar{
+.popup__content::-webkit-scrollbar {
   width: 4px;
 }
-.popup__content::-webkit-scrollbar-thumb{
+.popup__content::-webkit-scrollbar-thumb {
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -133,32 +179,102 @@ img {
   -o-border-radius: 4px;
   background-color: #d1cbcb;
 }
-
+.popup__content::-webkit-scrollbar-track {
+  margin: 4px;
+}
 
 .icon {
+  max-height: 36px;
 }
 
 .popup__more {
   .more {
   }
   .popup__more-items {
+    display: none;
+    flex-wrap: wrap;
+    margin-top: 12px;
     .popup__more-item {
       .popup__more-icon {
-        .popup__more-name {
+        display: inline-block;
+        width: 80px;
+        height: fit-content;
+        text-align: center;
+        cursor: pointer;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        -ms-border-radius: 4px;
+        -o-border-radius: 4px;
+        margin-bottom: 8px;
+        padding: 4px 0;
+
+        .popup__more-name:hover {
+          text-decoration: underline;
         }
+      }
+      .popup__more-icon:hover {
+        background-color: #d1cbcb;
+      }
+      .popup__more-icon:focus {
+        background-color: #aaa5a5;
+        outline: none;
       }
     }
   }
 }
 
-.popup__even-more {
-  .popup__more-even {
-  }
-  .even-more {
-  }
+.even-more {
+  width: 100%;
+}
+.even-more:hover {
+  text-decoration: underline;
 }
 
 .nav__item_bell {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  padding: 4px;
+  .bell {
+    width: 20px;
+  }
 }
-.bell {
+.nav__item_bell:focus,
+.nav__item_bell:hover,
+.nav__item_bell:focus-visible {
+  background-color: rgb(109, 221, 221);
+  outline: none;
+}
+
+.user-item {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  padding: 4px;
+  .user {
+    background-color: rgb(180, 235, 226);
+    color: rgb(56, 53, 49);
+    img {
+      width: 24px;
+    }
+  }
+}
+
+.popup__more-name,
+.even-more {
+  display: block;
+  color: rgb(27, 24, 24);
+  font-size: 16px;
+  padding: 8px;
+  cursor: pointer;
+  width: 80%;
+  margin: 0 auto;
+  color: #1f1a1a;
+  align-items: center;
 }
