--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,12 @@ img {
   justify-content: center;
 }
 
+.checkbox__more:focus ~ label .popup__more-name,
+.popup__more-name:hover{
+  background-color: #d1cbcb;
+}
+
+
 .checkbox__more:checked ~ label .popup__more-name {
   background-color: rgb(218, 230, 226);
   display: none;
@@ -115,7 +121,7 @@ img {
   top: 56px;
   right: -80px;
   overflow: hidden;
-  width: 256px;
+  width: 300px;
   height: 320px;
   padding: 4px;
   background-color: aliceblue;
@@ -146,6 +152,7 @@ img {
   align-items: flex-end;
   text-align: center;
   margin: 8px 4px 0px 4px;
+  padding: 0px 8px;
 }
 
 .popup__item-icon {
@@ -167,7 +174,7 @@ img {
 .popup__item-name {
   display: block;
   color: rgb(27, 24, 24);
-  font-size: 12px;
+  font-size: 11px;
   padding-top: 12px;
 }
 
@@ -182,6 +189,7 @@ img {
 .popup__item-icon:focus {
   background-color: #aaa5a5;
   outline: none;
+  padding: 0px 4px 0px 4px;
 }
 
 .popup__content::-webkit-scrollbar {
@@ -309,6 +317,7 @@ img {
   padding-bottom: 8px;
 }
 
+.checkbox__more:focus ~ label .popup__more-name,
 .popup__more-name:hover {
   text-decoration: underline;
   background-color: #d3d4d4;
@@ -324,3 +333,4 @@ img {
   outline: none;
   background-color: #e3e6e6;
 }
+
